# aoc2024

./: .day00  .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
inputs/: day01.encrypted  day02.encrypted  day03.encrypted  day04.encrypted  day05.encrypted  day06.encrypted  day07.encrypted  day08.encrypted  day09.encrypted  day10.encrypted  day11.encrypted  day12.encrypted  day13.encrypted  day14.encrypted  day15.encrypted  day16.encrypted  day17.encrypted  day18.encrypted  day19.encrypted  day20.encrypted  day21.encrypted  day22.encrypted  day23.encrypted
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  dijkstra.rs  input.rs  lib.rs  main.rs  pos.rs  utils.rs  vec.rs
